fix: fixed-bottom footer covering the app container (permanent)
remvoe the pb-5 and mb-5 and use custom css padding-bottom: 150px to make sure there is enough space for the footer

--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,14 @@ span {
 .timeBar {
   font-family: 'Rubik', Arial, sans-serif;
 }
+
+#app {
+  padding-bottom: 150px;
+}
+
+/* footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+} */
